# ImageLib

./: .gitignore  CMakeLists.txt  main.cpp
include/: image.h  numerics.h  types.h
inline/: image.inl  numerics.inl
src/: image.cpp  numerics.cpp
